5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1185.log
== TEST (2019-05-29 21:58:01) 
-- CODE:
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:58:30) 
-- CODE:
from numpy import*
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:58:35) 
-- CODE:
from numpy import*
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(j)
-- EXECUTION TIME:
0.529328
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
6
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
10
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:58:47) 
-- CODE:
from numpy import*
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:58:48) 
-- CODE:
from numpy import*
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(i)
-- EXECUTION TIME:
0.537794
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
x: 1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
x: 0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:58:50) 
-- CODE:
from numpy import*
a=array(eval(input("x: ")))

i=0
j=0

while j<size(a):
	if a[j]>99:
		print(j)
		i=i+1
	j=j+1
print(i)
-- EXECUTION TIME:
0.491159
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
